--- a/partials/calendar.html
+++ b/partials/calendar.html
@@ -241,12 +241,12 @@
                                             Cập nhật
                                         </button> -->
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;"
+                                            <button class="btn btn-warning btn-block btn-lg btn-update"
                                                 ng-disabled="_details.Status_student[0].id === 3" ng-click="up_detail()">Cập
                                                 Nhật
                                             </button>
-                                            <button class="btn btn-info btn-block">SMS</button>
-                                            <button class="btn btn-info btn-block">Email</button>
+                                            <button class="btn btn-info btn-block" ng-click="showsms()">SMS</button>
+                                            <!-- <button class="btn btn-info btn-block">Email</button> -->
                                         </div>
                                     </div>
                                 </div>
@@ -389,12 +389,12 @@
                                     </div>
                                     <div class="col-lg-1 p-0">
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;"
+                                            <button class="btn btn-warning btn-block btn-lg btn-add-new" style="padding-left: 17px;"
                                                 ng-click="addnewfromaddFriend(data)">Thêm
                                                 mới
                                             </button>
-                                            <button class="btn btn-info btn-block">SMS</button>
-                                            <button class="btn btn-info btn-block">Email</button>
+                                            <!-- <button class="btn btn-info btn-block">SMS</button>
+                                            <button class="btn btn-info btn-block">Email</button> -->
                                         </div>
                                     </div>
                                 </div>
