--- a/partials/home.html
+++ b/partials/home.html
@@ -231,12 +231,12 @@
                                     </div>
                                     <div class="col-lg-2">
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;"
+                                            <button class="btn btn-warning btn-block btn-lg btn-update"
                                                 ng-disabled="_details.Status_student[0].id === 3 || auth.Username !== _details.Manager[0].id"
                                                 ng-click="up_detail()">Cập Nhật
                                             </button>
                                             <button class="btn btn-info btn-block" ng-click="showsms(_details)">SMS</button>
-                                            <button class="btn btn-info btn-block">Email</button>
+                                            <!-- <button class="btn btn-info btn-block">Email</button> -->
                                         </div>
                                     </div>
                                 </div>
@@ -379,12 +379,12 @@
                                     </div>
                                     <div class="col-lg-1 p-0">
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;"
+                                            <button class="btn btn-warning btn-block btn-lg btn-add-new" style="padding-left: 17px;"
                                                 ng-click="AddStudent(data)">Thêm
                                                 mới
                                             </button>
-                                            <button class="btn btn-info btn-block">SMS</button>
-                                            <button class="btn btn-info btn-block">Email</button>
+                                            <!-- <button class="btn btn-info btn-block">SMS</button>
+                                            <button class="btn btn-info btn-block">Email</button> -->
                                         </div>
                                     </div>
                                 </div>
@@ -523,12 +523,12 @@
                                     </div>
                                     <div class="col-lg-1 p-0">
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;"
+                                            <button class="btn btn-warning btn-block btn-lg btn-add-new" style="padding-left: 17px;"
                                                 ng-click="addnewfromaddFriend(data)">Thêm
                                                 mới
                                             </button>
-                                            <button class="btn btn-info btn-block">SMS</button>
-                                            <button class="btn btn-info btn-block">Email</button>
+                                            <!-- <button class="btn btn-info btn-block">SMS</button>
+                                            <button class="btn btn-info btn-block">Email</button> -->
                                         </div>
                                     </div>
                                 </div>
@@ -721,7 +721,7 @@
                         </div>
                         <div class="col-lg-12 pre-scrollable sms-scroll" style="margin-top:10px; margin-bottom: 10px; height: 300px">
                             <p class="sms-send" ng-repeat="dt in content.SMS">
-                               <span style="display: block; border-bottom: 1px solid rgba(240, 240, 240, .9)">{{dt.SMS}}</span> 
+                               <span style="display: block; border-bottom: 1px solid rgba(240, 240, 240, .9);">{{dt.SMS}}</span> 
                                 <span class="sms-status text-left">{{dt.Time}}</span>
                                 <span class="sms-status text-right" style="float:right">{{dt._Status}}</span>
                             </p>
@@ -754,6 +754,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- Modal SMS Mẫu -->
 <div class="modal fade" id="smsmau" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
