--- a/partials/home.html
+++ b/partials/home.html
@@ -346,7 +346,7 @@
                                                     required>
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
-                                                        <a href="">
+                                                        <a href="" ng-click="openPhoneTab()">
                                                             <i class="material-icons" style="color:#00BCD4; margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
                                                         </a>
                                                     </span>
@@ -490,7 +490,7 @@
                                                     required>
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
-                                                        <a href="">
+                                                        <a href="" ng-click="openPhoneTab()">
                                                             <i class="material-icons" style="color:#00BCD4; margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
                                                         </a>
                                                     </span>
