--- a/partials/home.html
+++ b/partials/home.html
@@ -674,7 +674,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="exampleModalLabel">Nhập Mật Khẩu</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" ng-click="_close()" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
